Squashable checkpoint
Signed-off-by: Laird Nelson <ljnelson@gmail.com>